<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_light_background"
    tools:context=".activities.RegisterActivity">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/redbackground">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="40dp"
                    android:background="@drawable/whitebackground"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/imgBtnBack"
                        android:layout_width="40dp"
                        android:layout_height="30dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginRight="20dp"
                        android:layout_gravity="right"
                        android:background="@drawable/iconback" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="30dp"
                        android:textSize="24dp"
                        android:text="@string/prompt_sign_up"/>
                    <View
                        android:layout_width="wrap_content"
                        android:layout_height="3dp"
                        android:layout_margin="20dp"
                        android:background="@color/cardview_dark_background"/>

                    <ImageView
                        android:id="@+id/imgCamera"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_gravity="center"
                        android:src="@drawable/cameraicon"/>

                    <EditText
                        android:id="@+id/edtNIK"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_margin="15dp"
                        android:hint="@string/prompt_nik"
                        android:gravity="center"
                        android:background="@drawable/rectangleedittext"/>

                    <EditText
                        android:id="@+id/edtFullName"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_margin="15dp"
                        android:hint="@string/prompt_fullname"
                        android:gravity="center"
                        android:background="@drawable/rectangleedittext"/>
                    <EditText
                        android:id="@+id/edtEmail"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_margin="15dp"
                        android:hint="@string/prompt_email_address"
                        android:gravity="center"
                        android:background="@drawable/rectangleedittext"/>
                    <EditText
                        android:id="@+id/edtPhone"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_margin="15dp"
                        android:hint="@string/prompt_phone_numb"
                        android:gravity="center"
                        android:background="@drawable/rectangleedittext"/>
                    <EditText
                        android:id="@+id/edtCity"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_margin="15dp"
                        android:hint="@string/prompt_city"
                        android:gravity="center"
                        android:background="@drawable/rectangleedittext"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/disclaimer_sign_up_1"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/disclaimer_sign_up_2"/>

                    <Button
                        android:id="@+id/btnSignUp"
                        android:layout_width="154dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="50dp"
                        android:layout_marginBottom="20dp"
                        android:background="@drawable/ripple_effect"
                        android:text="@string/prompt_sign_up"
                        android:textColor="@android:color/white"
                        android:layout_gravity="center"/>
                </LinearLayout>
            </RelativeLayout>

        </LinearLayout>
</ScrollView>