<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_home"
    tools:context=".activities.ProfileActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/inputHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="30dp"
                    android:background="@drawable/rounded_welcome_home"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:layout_margin="5dp"
                                android:gravity="right"
                                android:orientation="vertical">

                                <ImageView
                                    android:id="@+id/imgBtnBack"
                                    android:layout_width="30dp"
                                    android:layout_height="30dp"
                                    android:background="@drawable/iconback"
                                    android:padding="10dp" />
                            </LinearLayout>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:layout_margin="5dp"
                                android:gravity="right"
                                android:orientation="vertical">

                               <TextView
                                   android:layout_width="match_parent"
                                   android:layout_height="wrap_content"
                                   android:gravity="left"
                                   android:fontFamily="@font/poppins_bold"
                                   android:layout_margin="5dp"
                                   android:textSize="18dp"
                                   android:text="@string/prompt_profile"/>
                            </LinearLayout>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:orientation="horizontal">

                                    <LinearLayout
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_margin="10dp"
                                        android:layout_weight="0.5"
                                        android:orientation="vertical">

                                        <ImageView
                                            android:layout_width="40dp"
                                            android:layout_height="40dp"
                                            android:layout_gravity="center"
                                            android:background="@drawable/rounded_ic_user"
                                            android:src="@drawable/ic_user" />
                                    </LinearLayout>

                                    <LinearLayout
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_margin="5dp"
                                        android:layout_weight="0.2"
                                        android:orientation="vertical">

                                        <TextView
                                            android:id="@+id/fullName"
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:fontFamily="@font/poppins_semibold"
                                            android:text="@string/prompt_username"
                                            android:textSize="20dp" />

                                        <TextView
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:text="@string/prompt_phone_number" />
                                    </LinearLayout>

                                    <LinearLayout
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_weight="0.6"
                                        android:layout_gravity="center_vertical"
                                        android:orientation="vertical">

                                            <ImageView
                                                android:layout_width="20dp"
                                                android:layout_height="20dp"
                                                android:src="@drawable/ic_bell_ring"/>
                                    </LinearLayout>
                                </LinearLayout>

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:orientation="horizontal">

                                    <LinearLayout
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_weight="0.7"
                                        android:orientation="vertical">

                                        <TextView
                                            android:layout_width="match_parent"
                                            android:layout_height="wrap_content"
                                            android:gravity="right"
                                            android:textSize="12dp"
                                            android:text="@string/prompt_quota_bbm" />

                                    </LinearLayout>

                                    <LinearLayout
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_weight="0.5"
                                        android:orientation="vertical">

                                        <TextView
                                            android:layout_width="match_parent"
                                            android:layout_height="wrap_content"
                                            android:gravity="center"
                                            android:textSize="12dp"
                                            android:text="@string/prompt_total_buy_bbm" />
                                    </LinearLayout>
                                </LinearLayout>

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:orientation="horizontal">

                                    <LinearLayout
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_gravity="right"
                                        android:layout_weight="0.4"
                                        android:gravity="right"
                                        android:orientation="vertical">

                                        <TextView
                                            android:layout_width="match_parent"
                                            android:layout_height="wrap_content"
                                            android:layout_gravity="right"
                                            android:fontFamily="@font/poppins_semibold"
                                            android:gravity="right"
                                            android:padding="10dp"
                                            android:text="@string/prompt_count_quota_bbm"
                                            android:textSize="20dp" />
                                    </LinearLayout>

                                    <LinearLayout
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_gravity="left"
                                        android:layout_weight="0.5"
                                        android:gravity="left"
                                        android:orientation="vertical">

                                        <TextView
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:layout_gravity="left"
                                            android:drawableLeft="@drawable/ic_pom_bensin"
                                            android:fontFamily="@font/poppins_semibold"
                                            android:gravity="left"
                                            android:padding="10dp"
                                            android:text="@string/prompt_count_quota_bbm"
                                            android:textSize="20dp" />
                                    </LinearLayout>

                                    <LinearLayout
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_gravity="center"
                                        android:layout_weight="0.6"
                                        android:background="@drawable/rounded_month_year"
                                        android:gravity="left"
                                        android:orientation="vertical">

                                        <TextView
                                            android:id="@+id/dateNow"
                                            android:layout_width="match_parent"
                                            android:layout_height="wrap_content"
                                            android:layout_gravity="center"
                                            android:layout_margin="10dp"
                                            android:fontFamily="@font/poppins_semibold"
                                            android:gravity="center"
                                            android:text="@string/prompt_month_year"
                                            android:textSize="8dp" />
                                    </LinearLayout>
                                </LinearLayout>
                            </LinearLayout>
                        </LinearLayout>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="3dp"
                            android:background="#dbdbdb" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="15dp"
                            android:orientation="horizontal">
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="0.9"
                                android:gravity="right"
                                android:orientation="vertical">
                                <ImageView
                                    android:layout_width="30dp"
                                    android:layout_height="30dp"
                                    android:src="@drawable/ic_history"/>
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="0.2"
                                android:orientation="vertical">
                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginLeft="5dp"
                                    android:textSize="18dp"
                                    android:fontFamily="@font/poppins_bold"
                                    android:text="@string/prompt_purchase_history"/>
                            </LinearLayout>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                            <ListView
                                android:id="@+id/lvPurchaseHistory"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:dividerHeight="2dp"
                                android:fillViewport="true"/>
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:background="@drawable/rounded_welcome_home"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.5"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/ic_wallet" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.5"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/ic_history" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.5"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/ic_home" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.5"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/ic_profile" />
            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>
</RelativeLayout>